feat: accordion List

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,7 +7,7 @@ ul {
   list-style: none;
 }
 
-body {
+main {
   background-color: #faf6ed;
   color: #222;
   -webkit-font-smoothing: antialiased; /* É uma propriedade para deixar a fonte 'mais limpa' */
