feat: estrutura de modules

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <main>
+  <div data-cor="azul" data-height="500"></div>
   <nav class="menu js-menu">
     <ul>
       <li><a href="#animais">Animais</a></li>
